force-app/main/default/objects/Crop__c/Crop__c.object-meta.xml
<CustomObject>
    <description>Objeto que armazena os registros de Safra provenientes do SAP, alimentado através de carga de dados.</description>
    
    <label>Safra</label>
    <nameField>
        <label>Nome de Safra</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Safras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>