force-app/main/default/objects/Crop__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Campo que indica se a safra esta ativa ou não.</description>
    <inlineHelpText>Campo que indica se a safra esta ativa ou não.</inlineHelpText>
    <label>Ativo?</label>
    <type>Checkbox</type>
</CustomField>