force-app/main/default/objects/Crop__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Descrição da safra.</description>
    <inlineHelpText>Descrição da safra.</inlineHelpText>
    <label>Descrição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>