force-app/main/default/objects/Crop__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Data de validada final da safra.</description>
    <inlineHelpText>Data de validada final da safra.</inlineHelpText>
    <label>Data final</label>
    <required>true</required>
    <type>Date</type>
</CustomField>