force-app/main/default/objects/Crop__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Código externo, chave primária utilizada pelo SAP para identificar o registro.</description>
    <externalId>true</externalId>
    <inlineHelpText>Código externo, chave primária utilizada pelo SAP para identificar o registro.</inlineHelpText>
    <label>Código Externo</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>