force-app/main/default/objects/Crop__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Data inicial da Safra</description>
    <inlineHelpText>Data inicial da Safra</inlineHelpText>
    <label>Data inicial</label>
    <required>true</required>
    <type>Date</type>
</CustomField>